--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "react-social-icons": "^6.14.0",
+    "social-icons": "^1.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
