--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
     "react-social-icons": "^6.14.0",
-    "social-icons": "^1.0.1"
+    "social-icons": "^1.0.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
